--- a/2jpeg/popup.html
+++ b/2jpeg/popup.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <button type="button" id="chn">TO JPG!</button>
-    <script src="test.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
